--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -37,3 +37,9 @@
   cursor: pointer;
   background-color: var(--background-color);
 }
+
+@media (max-width: 700px) {
+  .app-sidebar {
+    max-width: 250px;
+  }
+}
