--- a/src/Pages/DetailBorrower.css
+++ b/src/Pages/DetailBorrower.css
@@ -40,3 +40,19 @@
   background-color: var(--purple-color);
   transform: scale(1.1);
 }
+
+@media (max-width: 1100px) {
+  .detailborrowerpage-second {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+}
+
+@media (max-width: 700px) {
+  .detailborrowerpage-second {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+  }
+}
