--- a/src/Pages/Loans.css
+++ b/src/Pages/Loans.css
@@ -22,3 +22,19 @@
   padding: 1rem 1rem;
   overflow: auto;
 }
+
+@media (max-width: 1100px) {
+  .loanpage-top {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+}
+
+@media (max-width: 700px) {
+  .loanpage-top {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+  }
+}
