--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -14,9 +14,10 @@
   align-items: center;
   background-color: var(--front-color);
   gap: 20px;
-  padding: 30px;
+  padding: 10px;
   border-radius: 30px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin: 0 10px;
 }
 
 .login-logo {
